--- a/roster.html
+++ b/roster.html
@@ -182,14 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+<b>Status</b> -  Draft
+          <b><mark>>> Pending Confirmation <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 31/01, 16:26)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 31/01, 14:57)   Draft #2
-             #1 (Sun 31/01, 06:29)   [Pending Confirmation]
+<b>Changelog</b> -  #1 (Sun 07/02, 12:17)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -304,42 +302,11 @@ Mon  -  Millie   |LC 0700-0730 (0.5)
      +  Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Tue  -  Bea      |LC 0700-0730 (0.5)
-                 |CP 0730-1430 (7.0)
-     +  Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
+Wed  ^ Bea  |LC 0630-1100 (4.5)
+            |CP 1100-1530 (4.5)
 
-Wed  -  Millie   |LC 0700-0730 (0.5)
-                 |CP 0730-1430 (7.0)
-     ^  Bea    |LC 0630-1100 (4.5)
-               |CP 1100-1400 (3.0)
-     *  Lucy     |LC 0930-1430 (5.0)
-                 |CP 1430-1530 (1.0)
-
-Thu  -  Millie   |LC 0700-0730 (0.5)
-                 |CP 0730-1430 (7.0)
-     ^  Bea    |LC 0630-1100 (4.5)
-               |CP 1100-1400 (3.0)
-     *  Lucy     |LC 0930-1430 (5.0)
-                 |CP 1430-1530 (1.0)
-
-|==========================================================================|
-| For week starting    Mon   01/02/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1530|8.5   Millie-    Bea-       Millie-    Millie-    Millie  |
-| c    1100-1400|3.0   /          /          Bea^       Bea^       /       |
-| tr   1030-1430|4.0   Pla        Pla        /          /          Pla     |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*   Bea^/Lucy*  Bea     |
-|                                                                          |
-|==========================================================================|
+Thu  =  Pla   |CP 1100-1430 (3.5)
+     <  Lucy    |LC 0630-1430 (8.0)
 
 Thu: Bea day off
 |==========================================================================|
@@ -350,21 +317,25 @@ Thu: Bea day off
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1530|8.5   Millie-    Bea-       Millie-    Millie-    Millie  |
-| c    1100-1400|3.0   /          /          Bea^        []^       /       |
+| b    0700-1430|7.5   Millie     Bea        Millie     Millie     Millie  |
+| c    1100-1530|4.5   /          Pla        Bea^       Pla=       Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*  []^/Lucy*    Bea     |
+| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*    Lucy<      Bea     |
 |                                                                          |
 |==========================================================================|
 
+
+
+
 <!--
 
-Millie 
-Bea 
-Sean 
-Lucy 
+For previous week
+Millie  PAID
+Bea     4 (84)
+Sean    0
+Lucy    PAID
 
 _______________________________________________________________________
 ------------------ start PREV week ------------------------------------
