--- a/roster.html
+++ b/roster.html
@@ -302,10 +302,10 @@ Mon  -  Millie   |LC 0700-0730 (0.5)
      +  Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Wed  ^ Bea  |LC 0630-1100 (4.5)
-            |CP 1100-1530 (4.5)
+Wed  ^  Bea    |LC 0630-1100 (4.5)
+               |CP 1100-1530 (4.5)
 
-Thu  =  Pla   |CP 1100-1430 (3.5)
+Thu  =  Pla    |CP 1100-1430 (3.5)
      <  Lucy    |LC 0630-1430 (8.0)
 
 Thu: Bea day off
@@ -336,6 +336,10 @@ Millie  PAID
 Bea     4 (84)
 Sean    0
 Lucy    PAID
+
+Plah
+Mon, Tue, Fri -- All day 
+
 
 _______________________________________________________________________
 ------------------ start PREV week ------------------------------------
