--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 07/02, 12:17)   [Pending Confirmation]
+<b>Changelog</b> -  #2 (Sun 07/02, 12:49)   [
+             #1 (Sun 07/02, 12:17)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -297,16 +298,29 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-Mon  -  Millie   |LC 0700-0730 (0.5)
+Mon  &  Millie   |LC 0700-0730 (0.5)
                  |CP 0730-1430 (7.0)
      +  Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Wed  ^  Bea    |LC 0630-1100 (4.5)
-               |CP 1100-1530 (4.5)
+Tue  %  Millie   |LC 0700-0730 (0.5)
+                 |CP 0730-1430 (7.0)
+     +  Sean   |LC 0630-1430 (8.0)
+               |CP 1430-1530 (1.0)
 
-Thu  =  Pla    |CP 1100-1430 (3.5)
-     <  Lucy    |LC 0630-1430 (8.0)
+Wed  ^  Bea     |LC 0630-1100 (4.5)
+                |CP 1100-1530 (4.5)
+     *  Lucy   |LC 0930-1430 (5.0)
+     &  Millie   |LC 0700-0730 (0.5)
+                 |CP 0730-1430 (7.0)
+     
+Thu  =  Pla     |CP 1100-1430 (3.5)
+     <  Lucy     |LC 0930-1430 (8.0)
+     &  Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1430 (7.0)
+
+Fri  &  Millie   |LC 0700-0730 (0.5)
+                 |CP 0730-1430 (7.0)
 
 Thu: Bea day off
 |==========================================================================|
@@ -317,12 +331,12 @@ Thu: Bea day off
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Millie     Bea        Millie     Millie     Millie  |
-| c    1100-1530|4.5   /          Pla        Bea^       Pla=       Pla     |
+| b    0730-1430|7.0   Millie&    Bea%       Millie&    Millie&    Millie& |
+| c    1100-1530|4.5   /          Pla        Bea^       Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*    Lucy<      Bea     |
+| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*   []/Lucy<    Bea     |
 |                                                                          |
 |==========================================================================|
 
