--- a/roster.html
+++ b/roster.html
@@ -316,7 +316,7 @@ Wed  ^  Bea     |LC 0630-1100 (4.5)
      
 Thu  =  Pla     |CP 1100-1430 (3.5)
      <  Lucy     |LC 0930-1430 (8.0)
-     &  Millie  |LC 0700-0730 (0.5)
+     ~  Millie  |LC 0630-0730 (1.0)
                 |CP 0730-1430 (7.0)
 
 Fri  &  Millie   |LC 0700-0730 (0.5)
@@ -331,7 +331,7 @@ Thu: Bea day off
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0730-1430|7.0   Millie&    Bea%       Millie&    Millie&    Millie& |
+| b    0730-1430|7.0   Millie&    Bea%       Millie&    Millie~    Millie& |
 | c    1100-1530|4.5   /          Pla        Bea^       Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
