--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,7 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 07/02, 12:49)   [
+<b>Changelog</b> -  #2 (Sun 07/02, 12:49)   Draft #3
              #1 (Sun 07/02, 12:17)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -303,9 +303,7 @@ Mon  &  Millie   |LC 0700-0730 (0.5)
      +  Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Tue  %  Millie   |LC 0700-0730 (0.5)
-                 |CP 0730-1430 (7.0)
-     +  Sean   |LC 0630-1430 (8.0)
+Tue  +  Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
 Wed  ^  Bea     |LC 0630-1100 (4.5)
@@ -314,8 +312,7 @@ Wed  ^  Bea     |LC 0630-1100 (4.5)
      &  Millie   |LC 0700-0730 (0.5)
                  |CP 0730-1430 (7.0)
      
-Thu  =  Pla     |CP 1100-1430 (3.5)
-     <  Lucy     |LC 0930-1430 (8.0)
+Thu  <  Lucy     |LC 0930-1430 (8.0)
      ~  Millie  |LC 0630-0730 (1.0)
                 |CP 0730-1430 (7.0)
 
