--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 07/02, 12:49)   Draft #3
+<b>Changelog</b> -  #3 (Sun 07/02, 14:27)   Draft #4  
+             #2 (Sun 07/02, 12:49)   Draft #3
              #1 (Sun 07/02, 12:17)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -298,26 +299,28 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-Mon  &  Millie   |LC 0700-0730 (0.5)
-                 |CP 0730-1430 (7.0)
-     +  Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
+Mon  %  Bea    |LC 0700-0730 (0.5)
+               |CP 0730-1430 (7.0)
+     +  Sean    |LC 0630-1430 (8.0)
+                |CP 1430-1530 (1.0)
 
-Tue  +  Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
+Tue  &  Millie |LC 0700-0730 (0.5)
+               |CP 0730-1430 (7.0)
+     +  Sean    |LC 0630-1430 (8.0)
+                |CP 1430-1530 (1.0)
 
-Wed  ^  Bea     |LC 0630-1100 (4.5)
-                |CP 1100-1530 (4.5)
-     *  Lucy   |LC 0930-1430 (5.0)
-     &  Millie   |LC 0700-0730 (0.5)
+Wed  &  Millie   |LC 0700-0730 (0.5)
                  |CP 0730-1430 (7.0)
+     ^  Bea    |LC 0630-1100 (4.5)
+               |CP 1100-1530 (4.5)
+     *  Lucy    |LC 0930-1430 (5.0)
+          
+Thu  ~  Millie |LC 0630-0730 (1.0)
+               |CP 0730-1430 (7.0)
+     <  Lucy    |LC 0930-1430 (8.0)
      
-Thu  <  Lucy     |LC 0930-1430 (8.0)
-     ~  Millie  |LC 0630-0730 (1.0)
-                |CP 0730-1430 (7.0)
-
-Fri  &  Millie   |LC 0700-0730 (0.5)
-                 |CP 0730-1430 (7.0)
+Fri  &  Millie |LC 0700-0730 (0.5)
+               |CP 0730-1430 (7.0)
 
 Thu: Bea day off
 |==========================================================================|
@@ -328,7 +331,7 @@ Thu: Bea day off
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0730-1430|7.0   Millie&    Bea%       Millie&    Millie~    Millie& |
+| b    0730-1430|7.0   Bea%       Millie&    Millie&    Millie~    Millie& |
 | c    1100-1530|4.5   /          Pla        Bea^       Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
