--- a/roster.html
+++ b/roster.html
@@ -324,7 +324,7 @@ Fri  &  Millie |LC 0700-0730 (0.5)
 
 Thu: Bea day off
 |==========================================================================|
-| For week starting    Mon   08/02/2021      DRAFT                         |
+| For week starting    Mon   08/02/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
@@ -341,6 +341,22 @@ Thu: Bea day off
 |==========================================================================|
 
 
+|==========================================================================|
+| For week starting    Mon   15/02/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0730-1430|7.0   Bea        Millie     Millie     Millie     Millie  |
+| c    1100-1530|4.5   Pla        Pla        Bea^       Bea        Pla     |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*   Bea/Lucy<   Bea     |
+|                                                                          |
+|==========================================================================|
 
 
 <!--
