--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 07/02, 14:27)   Draft #4  
+<b>Changelog</b> -  #4 (Sun 07/02, 15:33)   [Final]<span id = "paraChangelog" style = "display:none">
+             #3 (Sun 07/02, 14:27)   Draft #4  
              #2 (Sun 07/02, 12:49)   Draft #3
              #1 (Sun 07/02, 12:17)   [Pending Confirmation]
                                      Draft #1</span>
