--- a/roster.html
+++ b/roster.html
@@ -351,7 +351,7 @@ Thu: Bea day off
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0730-1430|7.0   Bea        Millie     Millie     Millie     Millie  |
-| c    1100-1530|4.5   Pla        Pla        Bea^       Bea        Pla     |
+| c    1100-1530|4.5   Pla        Pla        Pla        Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
