--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 07/02, 15:33)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #5 (09/02, 20:00)   Changes for Wed, Thu
+             #4 (Sun 07/02, 15:33)   [Final]<span id = "paraChangelog" style = "display:none">
              #3 (Sun 07/02, 14:27)   Draft #4  
              #2 (Sun 07/02, 12:49)   Draft #3
              #1 (Sun 07/02, 12:17)   [Pending Confirmation]
@@ -313,12 +314,16 @@ Tue  &  Millie |LC 0700-0730 (0.5)
 Wed  &  Millie   |LC 0700-0730 (0.5)
                  |CP 0730-1430 (7.0)
      ^  Bea    |LC 0630-1100 (4.5)
-               |CP 1100-1530 (4.5)
+               |CP 1100-1400 (3.0)
      *  Lucy    |LC 0930-1430 (5.0)
+                |CP 1430-1530 (1.0)
           
-Thu  ~  Millie |LC 0630-0730 (1.0)
-               |CP 0730-1430 (7.0)
+Thu  ~  Millie |LC 0630-1100 (4.5)
+               |CP 1100-1430 (3.5)
      <  Lucy    |LC 0930-1430 (5.0)
+                |CP 1430-1530 (1.0)
+     #  Pla    |LC 0700-0730 (0.5)
+               |CP 0730-1430 (7.0)
      
 Fri  &  Millie |LC 0700-0730 (0.5)
                |CP 0730-1430 (7.0)
@@ -333,11 +338,11 @@ Thu: Bea day off
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0730-1430|7.0   Bea%       Millie&    Millie&    Millie~    Millie& |
-| c    1100-1530|4.5   /          Pla        Bea^       Pla        Pla     |
+| c    1100-1530|4.5   /          Pla        Bea^       Pla#       Pla     |
 |                                                                          |
 |       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*   []/Lucy<    Bea     |
+| d    0630-1500|      Mony       Mony       Mony       Mony        Mony   |
+| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*  Millie~/Lucy<  Bea   |
 |                                                                          |
 |==========================================================================|
 
