--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,7 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (09/02, 20:00)   Changes for Wed, Thu
+<b>Changelog</b> -  #5 (Tue 09/02, 20:00)   Changes for Wed, Thu
              #4 (Sun 07/02, 15:33)   [Final]<span id = "paraChangelog" style = "display:none">
              #3 (Sun 07/02, 14:27)   Draft #4  
              #2 (Sun 07/02, 12:49)   Draft #3
