--- a/roster.html
+++ b/roster.html
@@ -312,18 +312,18 @@ Tue  &  Millie |LC 0700-0730 (0.5)
                 |CP 1430-1530 (1.0)
 
 Wed  &  Millie   |LC 0700-0730 (0.5)
-                 |CP 0730-1430 (7.0)
+                 |CP 0730-1500 (7.5)
      ^  Bea    |LC 0630-1100 (4.5)
                |CP 1100-1400 (3.0)
      *  Lucy    |LC 0930-1430 (5.0)
                 |CP 1430-1530 (1.0)
           
 Thu  ~  Millie |LC 0630-1100 (4.5)
-               |CP 1100-1430 (3.5)
+               |CP 1100-1500 (4.0)
      <  Lucy    |LC 0930-1430 (5.0)
                 |CP 1430-1530 (1.0)
      #  Pla    |LC 0700-0730 (0.5)
-               |CP 0730-1430 (7.0)
+               |CP 0730-1400 (6.5)
      
 Fri  &  Millie |LC 0700-0730 (0.5)
                |CP 0730-1430 (7.0)
@@ -356,7 +356,7 @@ Thu: Bea day off
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0730-1430|7.0   Bea        Bea        Millie     Millie     Millie  |
-| c    1100-1530|4.5   Pla        Pla        Pla        Pla-       Pla-    |
+| c    1100-1530|4.5   Pla        Pla        []         Pla[]      Pla-    |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
@@ -372,6 +372,8 @@ Lucy    PAID
 
 Plah
 Mon, Tue, Fri -- All day 
+Wed- Day off
+Thu must finish 1430
 
 
 _______________________________________________________________________
