--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Tue 09/02, 20:00)   Changes for Wed, Thu
+<b>Changelog</b> -  #6 (Wed 10/02, 19:28)   Pla start early Thu at 0630
+             #5 (Tue 09/02, 20:00)   Changes for Wed, Thu
              #4 (Sun 07/02, 15:33)   [Final]<span id = "paraChangelog" style = "display:none">
              #3 (Sun 07/02, 14:27)   Draft #4  
              #2 (Sun 07/02, 12:49)   Draft #3
@@ -322,7 +323,7 @@ Thu  ~  Millie |LC 0630-1100 (4.5)
                |CP 1100-1500 (4.0)
      <  Lucy    |LC 0930-1430 (5.0)
                 |CP 1430-1530 (1.0)
-     #  Pla    |LC 0700-0730 (0.5)
+     #  Pla    |LC 0630-0730 (1.0)
                |CP 0730-1400 (6.5)
      
 Fri  &  Millie |LC 0700-0730 (0.5)
