--- a/roster.html
+++ b/roster.html
@@ -302,7 +302,7 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-Mon  %  Bea    |LC 0700-0730 (0.5)
+<!--Mon  %  Bea    |LC 0700-0730 (0.5)
                |CP 0730-1430 (7.0)
      +  Sean    |LC 0630-1430 (8.0)
                 |CP 1430-1530 (1.0)
@@ -347,23 +347,35 @@ Thu: Bea day off
 |                                                                          |
 |==========================================================================|
 
+-->
+Thu  % Millie  |LC 0700-0730 (0.5)
+               |CP 0730-1530 (8.0)
+     % Pla    |LC 0630-1430 (8.0)
 
+Fri  ^ Millie  |LC 0700-0730 (0.5)
+               |CP 0730-1530 (8.0)
+     ^ Pla    |LC 0630-1430 (8.0)
 |==========================================================================|
-| For week starting    Mon   15/02/2021      DRAFT                         |
+| For week starting    Mon   15/02/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0730-1430|7.0   Bea        Bea        Millie     Millie     Millie  |
-| c    1100-1530|4.5   Pla        Pla        []         Pla[]      Pla-    |
+| a    0730-1530|      /          /          /          Nere       Nere    |
+| b    0700-1430|7.5   /          /          /          Millie%    Millie^ |
+| c    1100-1530|4.5   /          /          /          Pla*%      Pla^    |
 |                                                                          |
 |       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+      Lucy      Bea/Lucy<   Bea     |
+| d    0630-1500|      /          /          /          Mony       Mony    |
+| e    0630-1430|8.0   /          /          /          Bea        Bea     |
 |                                                                          |
 |==========================================================================|<!--
+
+For this week
+Millie  31.5 - 23.5 = 8 ($168)
+Bea     23.0 - 23.5 = -0.5 ($0)
+Pla     16.5 (297)
 
 For previous week
 Millie  PAID
@@ -419,7 +431,6 @@ Millie 34 - 23 = 11 (231)
 Sean 26- 23    = 3  (63)
 Bea 28.5- 23   = 5.5 (115.5)
 -->
-
 </em>
 </span></span></div>
 </pre>
