--- a/roster.html
+++ b/roster.html
@@ -183,16 +183,11 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+          <b><mark>>> Pending Confirmation <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #6 (Wed 10/02, 19:28)   Pla start early Thu at 0630
-             #5 (Tue 09/02, 20:00)   Changes for Wed, Thu
-             #4 (Sun 07/02, 15:33)   [Final]<span id = "paraChangelog" style = "display:none">
-             #3 (Sun 07/02, 14:27)   Draft #4  
-             #2 (Sun 07/02, 12:49)   Draft #3
-             #1 (Sun 07/02, 12:17)   [Pending Confirmation]
+<b>Changelog</b> -  #1 (Sun 14/02, 13:29)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
