--- a/roster.html
+++ b/roster.html
@@ -359,7 +359,7 @@ Fri  ^ Millie  |LC 0700-0730 (0.5)
 |       CP                                                                 |
 | a    0730-1530|      /          /          /          Nere       Nere    |
 | b    0700-1430|7.5   /          /          /          Millie%    Millie^ |
-| c    1100-1530|4.5   /          /          /          Pla*%      Pla^    |
+| c    1100-1530|4.5   /          /          /          Pla%       Pla^    |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          /          /          Mony       Mony    |
