--- a/roster.html
+++ b/roster.html
@@ -187,8 +187,9 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 14/02, 13:29)   [Pending Confirmation]
-                                     Draft #1</span>
+<b>Changelog</b> -  #2 (Wed 17/02, 09:38)   [Pending Confirmation]
+                                     Draft #2
+             #1 (Sun 14/02, 13:29)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -345,11 +346,11 @@ Thu: Bea day off
 -->
 Thu  % Millie  |LC 0700-0730 (0.5)
                |CP 0730-1530 (8.0)
-     % Pla    |LC 0630-1430 (8.0)
+     % Pla    |LC 1030-1430 (4.0)
 
 Fri  ^ Millie  |LC 0700-0730 (0.5)
                |CP 0730-1530 (8.0)
-     ^ Pla    |LC 0630-1430 (8.0)
+     ^ Pla    |LC 1030-1430 (4.0)
 |==========================================================================|
 | For week starting    Mon   15/02/2021                                    |
 |==========================================================================|
