--- a/roster.html
+++ b/roster.html
@@ -366,7 +366,37 @@ Fri  ^ Millie  |LC 0700-0730 (0.5)
 | d    0630-1500|      /          /          /          Mony       Mony    |
 | e    0630-1430|8.0   /          /          /          Bea        Bea     |
 |                                                                          |
+|==========================================================================|
+
+Mon   + Pla   |CP 1100-1500 (4.0)
+      + Sean   |LC 0630-1430 (8.0)
+               |CP 1430-1530 (1.0)
+
+Tue   + Pla   |CP 1100-1500 (4.0)
+      + Sean   |LC 0630-1430 (8.0)
+               |CP 1430-1530 (1.0)
+
+Wed   ^ Bea   |LC 0630-1100 (4.5)
+              |CP 1100-1500 (4.0)
+      ^ Lucy   |LC 0930-1430 (5.0)
+               |CP 1430-1530 (1.0)
+|==========================================================================|
+| For week starting    Mon   22/02/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5   Bea        Bea        Millie     Millie     Millie  |
+| c    1100-1530|4.5   Pla+       Pla+     Bea/Lucy^    Pla        Pla     |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Sean+      Sean+    Bea/Lucy^    Lucy       Bea     |
+|                                                                          |
 |==========================================================================|<!--
+
 
 For this week
 Millie  31.5 - 23.5 = 8 ($168)
