--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Wed 17/02, 09:38)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Wed 17/02, 20:22)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Wed 17/02, 09:38)   [Pending Confirmation]
                                      Draft #2
              #1 (Sun 14/02, 13:29)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -346,11 +347,11 @@ Thu: Bea day off
 -->
 Thu  % Millie  |LC 0700-0730 (0.5)
                |CP 0730-1530 (8.0)
-     % Pla    |LC 1030-1430 (4.0)
+     % Pla    |CP 1030-1430 (4.0)
 
 Fri  ^ Millie  |LC 0700-0730 (0.5)
                |CP 0730-1530 (8.0)
-     ^ Pla    |LC 1030-1430 (4.0)
+     ^ Pla    |CP 1030-1430 (4.0)
 |==========================================================================|
 | For week starting    Mon   15/02/2021                                    |
 |==========================================================================|
