--- a/roster.html
+++ b/roster.html
@@ -182,15 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Wed 17/02, 20:22)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Wed 17/02, 09:38)   [Pending Confirmation]
-                                     Draft #2
-             #1 (Sun 14/02, 13:29)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 20/02, 18:25)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -345,32 +342,6 @@ Thu: Bea day off
 |==========================================================================|
 
 -->
-Thu  % Millie  |LC 0700-0730 (0.5)
-               |CP 0730-1530 (8.0)
-     % Pla    |CP 1030-1430 (4.0)
-
-Fri  ^ Millie  |LC 0700-0730 (0.5)
-               |CP 0730-1530 (8.0)
-     ^ Pla    |CP 1030-1430 (4.0)
-|==========================================================================|
-| For week starting    Mon   15/02/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      /          /          /          Nere       Nere    |
-| b    0700-1430|7.5   /          /          /          Millie%    Millie^ |
-| c    1100-1530|4.5   /          /          /          Pla%       Pla^    |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      /          /          /          Mony       Mony    |
-| e    0630-1430|8.0   /          /          /          Bea        Bea     |
-|                                                                          |
-|==========================================================================|
-
-
-
 Mon   + Pla   |CP 1100-1500 (4.0)
       + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
@@ -379,10 +350,10 @@ Tue   + Pla   |CP 1100-1500 (4.0)
       + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Wed   ^ Bea   |LC 0630-1100 (4.5)
-              |CP 1100-1500 (4.0)
-      ^ Lucy   |LC 0930-1430 (5.0)
-               |CP 1430-1530 (1.0)
+Wed   * Millie  |LC 0700-0730 (0.5)
+                |CP 0700-1530 (8.5)
+
+Lucy: Can't work this week
 |==========================================================================|
 | For week starting    Mon   22/02/2021      DRAFT                         |
 |==========================================================================|
@@ -391,12 +362,12 @@ Wed   ^ Bea   |LC 0630-1100 (4.5)
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Bea        Bea        Millie     Millie     Millie  |
-| c    1100-1530|4.5   Pla+       Pla+     Bea/Lucy^    Pla        Pla     |
+| b    0700-1430|7.5   Bea        Bea        Millie*    Millie     Millie  |
+| c    1100-1530|4.5   Pla+       Pla+       []         Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+    Bea/Lucy^    Lucy       Bea     |
+| e    0630-1430|8.0   Sean+      Sean+      Bea        Bea        Bea     |
 |                                                                          |
 |==========================================================================|<!--
 
