--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,14 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 20/02, 18:33)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 21/02, 14:44)   [Pending Confirmation]
+                                     Draft #2
+             #1 (Sat 20/02, 18:33)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -342,16 +344,17 @@ Thu: Bea day off
 |==========================================================================|
 
 -->
-Mon   + Pla   |CP 1100-1500 (4.0)
-      + Sean   |LC 0630-1430 (8.0)
+Mon   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
+      - Pla   |CP 1100-1500 (4.0)
 
-Tue   + Pla   |CP 1100-1500 (4.0)
-      + Sean   |LC 0630-1430 (8.0)
+Tue   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
-
+      - Pla   |CP 1100-1500 (4.0)
+      
 Wed   * Millie  |LC 0700-0730 (0.5)
                 |CP 0700-1530 (8.5)
+      = Pla    |CP 1100-1430 (3.5)
 
 Lucy: Can't work this week
 |==========================================================================|
@@ -362,12 +365,12 @@ Lucy: Can't work this week
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Bea        Bea        Millie*    Millie     Millie  |
-| c    1100-1530|4.5   Pla+       Pla+       []         Pla        Pla     |
+| b    0700-1430|7.5   Bea        Millie     Millie*    Millie     Millie  |
+| c    1100-1530|4.5   Pla-       Pla-       Pla=       Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+      Bea        Bea        Bea     |
+| e    0630-1430|8.0   Sean^      Sean^      Bea        Bea        Bea     |
 |                                                                          |
 |==========================================================================|<!--
 
