--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 21/02, 14:44)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 21/02, 15:18)   Draft #3
+             #2 (Sun 21/02, 14:44)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 20/02, 18:33)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -366,7 +367,7 @@ Lucy: Can't work this week
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5   Bea        Millie     Millie*    Millie     Millie  |
-| c    1100-1530|4.5   Pla-       Pla-       Pla=       Pla        Pla     |
+| c    1100-1530|4.5   /          Pla-       Pla=       Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
