--- a/roster.html
+++ b/roster.html
@@ -347,7 +347,7 @@ Thu: Bea day off
 -->
 Mon   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
-      - Pla   |CP 1100-1500 (4.0)
+      & Bea   |CP 0700-1500 (8.0)
 
 Tue   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
@@ -366,7 +366,7 @@ Lucy: Can't work this week
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Bea        Millie     Millie*    Millie     Millie  |
+| b    0700-1430|7.5   Bea&       Millie     Millie*    Millie     Millie  |
 | c    1100-1530|4.5   /          Pla-       Pla=       Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
