--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 21/02, 15:18)   Draft #3
+<b>Changelog</b> -  #3 (Sun 21/02, 18:25)   [Final]<span id = "paraChangelog" style = "display:none">
+             #3 (Sun 21/02, 15:18)   Draft #3
              #2 (Sun 21/02, 14:44)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 20/02, 18:33)   Draft #1</span>
@@ -359,7 +360,7 @@ Wed   * Millie  |LC 0700-0730 (0.5)
 
 Lucy: Can't work this week
 |==========================================================================|
-| For week starting    Mon   22/02/2021      DRAFT                         |
+| For week starting    Mon   22/02/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
