--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 21/02, 18:25)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #5 (Sun 21/02, 20:48)   Swap Millie/Bea Mon/Tue
+             #4 (Sun 21/02, 18:25)   [Final]<span id = "paraChangelog" style = "display:none">
              #3 (Sun 21/02, 15:18)   Draft #3
              #2 (Sun 21/02, 14:44)   [Pending Confirmation]
                                      Draft #2
@@ -346,9 +347,14 @@ Thu: Bea day off
 |==========================================================================|
 
 -->
+Mon - Fri  
+      ~ b   |LC 0700-0730 (0.5)
+            |CP 0730-1430 (7.0) 
+
 Mon   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
-      & Bea   |CP 0700-1500 (8.0)
+      & Millie  |LC 0700-0730 (0.5)
+                |CP 0700-1500 (8.0)
 
 Tue   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
@@ -367,7 +373,7 @@ Lucy: Can't work this week
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Bea&       Millie     Millie*    Millie     Millie  |
+| b    0700-1430|7.5~  Millie&    Bea        Millie*    Millie     Millie  |
 | c    1100-1530|4.5   /          Pla-       Pla=       Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
