--- a/roster.html
+++ b/roster.html
@@ -298,9 +298,9 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-Mon - Fri  
+<em>Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
-            |CP 0730-1430 (7.0) 
+            |CP 0730-1430 (7.0) </em>
 
 Mon   + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
