--- a/roster.html
+++ b/roster.html
@@ -316,6 +316,7 @@ Wed   & Millie  |LC 0700-0730 (0.5)
                 |CP 0700-1530 (8.5)
       # Bea   |LC 0630-1100 (4.5)
               |CP 1100-1430 (3.5)
+      # Lucy |LC 0930-1430 (5.0)
 
 Lucy - Wed only
 Pla  - Thu, Fri only
