--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,7 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 28/02, 17:55)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #3 (Sun 28/02, 17:55)   [Final]<span id = "paraChangelog" style = "display:none"></span>
              #2 (Sun 28/02, 17:10)   [Pending Confirmation]
                                      Draft #2
              #1 (Fri 26/02, 20:09)   Draft #1</span>
@@ -306,12 +306,12 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Mon   + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
       & Bea  |LC 0700-0730 (0.5)
-             |CP 0700-1530 (8.5)
+             |CP 0700-1500 (8.0)
 
 Tue   + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
       & Millie  |LC 0700-0730 (0.5)
-                |CP 0700-1530 (8.5)
+                |CP 0700-1500 (8.0)
       
 Wed   & Millie  |LC 0700-0730 (0.5)
                 |CP 0700-1530 (8.5)
@@ -330,7 +330,7 @@ Pla  - Thu, Fri only
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea&       Millie&    Millie&    Millie     Millie  |
-| c    1100-1530|4.5   /          /          Bea        Pla        Pla     |
+| c    1030-1530|5.0   /          /          Bea        Pla        Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
