--- a/roster.html
+++ b/roster.html
@@ -338,6 +338,7 @@ Pla  - Thu, Fri only
 |                                                                          |
 |==========================================================================|
 
+Millie - day off Tue
 |==========================================================================|
 | For week starting    Mon   08/03/2021      DRAFT                         |
 |==========================================================================|
