--- a/roster.html
+++ b/roster.html
@@ -182,15 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 28/02, 17:55)   [Final]<span id = "paraChangelog" style = "display:none"></span>
-             #2 (Sun 28/02, 17:10)   [Pending Confirmation]
-                                     Draft #2
-             #1 (Fri 26/02, 20:09)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 06/03, 11:43)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -303,11 +300,6 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) </em>
 
-Mon   + Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
-      & Bea  |LC 0700-0730 (0.5)
-             |CP 0700-1500 (8.0)
-
 Tue   + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
       & Millie  |LC 0700-0730 (0.5)
@@ -319,26 +311,8 @@ Wed   & Millie  |LC 0700-0730 (0.5)
               |CP 1100-1430 (3.5)
       # Lucy |LC 0930-1430 (5.0)
 
-Lucy - Wed only
-Pla  - Thu, Fri only
-|==========================================================================|
-| For week starting    Mon   01/03/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea&       Millie&    Millie&    Millie     Millie  |
-| c    1030-1530|5.0   /          /          Bea        Pla        Pla     |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+    Bea/Lucy#    Bea        Bea     |
-|                                                                          |
-|==========================================================================|
 
-Millie - day off Tue
+Lucy - Wed only
 |==========================================================================|
 | For week starting    Mon   08/03/2021      DRAFT                         |
 |==========================================================================|
@@ -346,7 +320,24 @@ Millie - day off Tue
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| a    0730-1530|      /          Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5~  /          Bea        Millie*    Millie     Millie  |
+| c    1100-1530|4.5   /          Pla        Pla        Pla        Pla     |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      /          Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   /          Sean^    Bea/Lucy   Bea/Lucy     Bea     |
+|                                                                          |
+|==========================================================================|
+
+|==========================================================================|
+| For week starting    Mon   15/03/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      /          Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Millie&    Bea        Millie*    Millie     Millie  |
 | c    1100-1530|4.5   Pla        Pla        Pla        Pla        Pla     |
 |                                                                          |
