--- a/roster.html
+++ b/roster.html
@@ -312,6 +312,7 @@ Wed   & Millie  |LC 0700-0730 (0.5)
       # Lucy |LC 0930-1430 (5.0)
 
 
+Pla - Tue, Wed only
 Lucy - Wed only
 |==========================================================================|
 | For week starting    Mon   08/03/2021      DRAFT                         |
@@ -330,6 +331,7 @@ Lucy - Wed only
 |                                                                          |
 |==========================================================================|
 
+Pla - Mon, Wed only
 |==========================================================================|
 | For week starting    Mon   15/03/2021      DRAFT                         |
 |==========================================================================|
