--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,14 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 06/03, 11:43)   Draft #1</span>
+<b>Changelog</b> -  #2 (Mon 08/03, 14:22)   [Pending Confirmation]
+                                     Draft #2
+             #1 (Sat 06/03, 11:43)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -300,34 +302,33 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) </em>
 
-Tue   + Sean   |LC 0630-1430 (8.0)
+Tue   - Pla   |CP 1100-1500 (4.0)
+      + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
-      & Millie  |LC 0700-0730 (0.5)
-                |CP 0700-1500 (8.0)
       
-Wed   & Millie  |LC 0700-0730 (0.5)
-                |CP 0700-1530 (8.5)
+Thu   $ Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1530 (8.0)
       # Bea   |LC 0630-1100 (4.5)
               |CP 1100-1430 (3.5)
-      # Lucy |LC 0930-1430 (5.0)
+      # Lucy    |LC 0930-1430 (5.0)
 
 
 Pla - Tue, Wed only
-Lucy - Wed only
+Lucy - Thu only
 |==========================================================================|
-| For week starting    Mon   08/03/2021      DRAFT                         |
+| For week starting    Mon   08/03/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Bea        Millie*    Millie     Millie  |
-| c    1100-1530|4.5   /          Pla        Pla        Pla        Pla     |
+| b    0700-1430|7.5~  /          Bea        Millie     Millie$    Millie  |
+| c    1100-1530|4.5   /          Pla-       Pla        Bea#       /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   /          Sean^    Bea/Lucy   Bea/Lucy     Bea     |
+| e    0630-1430|8.0   /          Sean^      Bea      Bea#/Lucy#   Bea     |
 |                                                                          |
 |==========================================================================|
 
@@ -339,13 +340,13 @@ Pla - Mon, Wed only
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      /          Nere       Nere       Nere       Nere    |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Millie&    Bea        Millie*    Millie     Millie  |
-| c    1100-1530|4.5   Pla        Pla        Pla        Pla        Pla     |
+| c    1100-1530|4.5   Pla        /          Pla        Bea        Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean^      Sean^    Bea/Lucy   Bea/Lucy     Bea     |
+| e    0630-1430|8.0   Sean^      Sean^      Bea      Bea/Lucy     Bea     |
 |                                                                          |
 |==========================================================================|
 
