--- a/roster.html
+++ b/roster.html
@@ -312,6 +312,8 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
               |CP 1100-1430 (3.5)
       # Lucy    |LC 0930-1430 (5.0)
 
+Fri   $ Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1530 (8.0)
 
 Pla - Tue, Wed only
 Lucy - Thu only
@@ -323,7 +325,7 @@ Lucy - Thu only
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Bea        Millie     Millie$    Millie  |
+| b    0700-1430|7.5~  /          Bea        Millie     Millie$    Millie$ |
 | c    1100-1530|4.5   /          Pla-       Pla        Bea#       /       |
 |                                                                          |
 |       LC                                                                 |
