--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Mon 08/03, 14:22)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Mon 08/03, 15:16)   Changes for Wed Millie, Pla
+             #2 (Mon 08/03, 14:22)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 06/03, 11:43)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -305,6 +306,10 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Tue   - Pla   |CP 1100-1500 (4.0)
       + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
+
+Fri   $ Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1530 (8.0)
+      - Pla   |CP 1100-1430 (3.5)
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
@@ -325,8 +330,8 @@ Lucy - Thu only
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Bea        Millie     Millie$    Millie$ |
-| c    1100-1530|4.5   /          Pla-       Pla        Bea#       /       |
+| b    0700-1430|7.5~  /          Bea        Millie$    Millie$    Millie$ |
+| c    1100-1530|4.5   /          Pla-       Pla-       Bea#       /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
