--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Mon 08/03, 15:16)   Changes for Wed Millie, Pla
+<b>Changelog</b> -  #4 (Mon 08/03, 18:29)   [Final]<span id = "paraChangelog" style = "display:none">
+             #3 (Mon 08/03, 15:16)   Changes for Wed Millie, Pla
              #2 (Mon 08/03, 14:22)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 06/03, 11:43)   Draft #1</span>
