--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Mon 08/03, 18:29)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #5 (Tue 09/03, 16:52)   Change for Pla Wed
+             #4 (Mon 08/03, 18:29)   [Final]<span id = "paraChangelog" style = "display:none">
              #3 (Mon 08/03, 15:16)   Changes for Wed Millie, Pla
              #2 (Mon 08/03, 14:22)   [Pending Confirmation]
                                      Draft #2
@@ -310,7 +311,7 @@ Tue   - Pla   |CP 1100-1500 (4.0)
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      - Pla   |CP 1100-1430 (3.5)
+      = Pla   |CP 1030-1430 (4.0)
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
@@ -332,7 +333,7 @@ Lucy - Thu only
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  /          Bea        Millie$    Millie$    Millie$ |
-| c    1100-1530|4.5   /          Pla-       Pla-       Bea#       /       |
+| c    1100-1530|4.5   /          Pla-       Pla=       Bea#       /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
