--- a/roster.html
+++ b/roster.html
@@ -342,6 +342,24 @@ Lucy - Wed only
 |                                                                          |
 |==========================================================================|
 
+
+|==========================================================================|
+| For week starting    Mon   22/03/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5~  Bea        Millie     Millie$    Millie$    Millie$ |
+| c    1030-1530|5.0   Pla-       Bea=       Pla-       Trial@     Trial@  |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Sean+      Sean+    Bea#/Lucy#   Bea        Bea     |
+|                                                                          |
+|==========================================================================|
+
 <!--Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) 
